Finalizando desktop e mobile

--- a/ex-2/sass/normalize.css
+++ b/ex-2/sass/normalize.css
@@ -7,6 +7,7 @@
   --v-grey-secondary-color: #D8D8D8;
   --v-blue-primary-color: #0016DF;
   --v-blue-secondary-color: #0017E9;
+  --v-blue-tertiary-color: #001C43;
 }
 
 * {
