--- a/ex-2/sass/home.css
+++ b/ex-2/sass/home.css
@@ -259,7 +259,7 @@
 .main .main_services {
   background-color: var(--v-grey-secondary-color);
   text-align: center;
-  padding: 40px 20px;
+  padding: 90px 20px;
 }
 .main .main_services .main_services--text {
   color: var(--v-blue-secondary-color);
@@ -300,9 +300,9 @@
     margin: 20px 5px;
   }
 }
-@media (min-width: 501px) and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
   .main .main_services .main_services_content .main_services_content_card {
-    width: 300px;
+    width: 350px;
     margin: 20px 30px;
   }
 }
@@ -335,5 +335,159 @@
 @media (max-width: 768px) {
   .main .main_services .main_services_content .main_services_content_card .main_services_content_card--info span {
     font-size: 13px;
+  }
+}
+.main .main_contact {
+  padding: 90px 20px;
+  display: flex;
+  justify-content: space-around;
+  text-transform: uppercase;
+}
+@media (max-width: 768px) {
+  .main .main_contact {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.main .main_contact .main_contact_content {
+  max-width: 610px;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_content {
+    text-align: center;
+  }
+}
+.main .main_contact .main_contact_content .main_contact_content--title {
+  color: var(--v-blue-secondary-color);
+  padding: 0 15px;
+  margin-bottom: 10px;
+  font-size: 32px;
+  font-weight: 500;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_content .main_contact_content--title {
+    font-size: 20px;
+    text-align: center;
+  }
+}
+.main .main_contact .main_contact_content .main_contact_content--subtitle {
+  margin: 20px 0;
+  padding: 0 15px;
+  font-size: 24px;
+  font-weight: 500;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_content .main_contact_content--subtitle {
+    font-size: 15px;
+  }
+}
+.main .main_contact .main_contact_content .main_contact_content--galery {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-top: 35px;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_content .main_contact_content--galery {
+    justify-content: center;
+  }
+}
+.main .main_contact .main_contact_content .main_contact_content--galery figure {
+  margin: 10px 15px;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_content .main_contact_content--galery figure {
+    text-align: start;
+  }
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form {
+    margin-top: 40px;
+  }
+}
+.main .main_contact .main_contact_form .main_contact_form--title {
+  font-size: 32px;
+  font-weight: 500;
+  color: var(--v-blue-secondary-color);
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form .main_contact_form--title {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
+.main .main_contact .main_contact_form .main_contact_form--subtitle {
+  font-size: 24px;
+  font-weight: 500;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form .main_contact_form--subtitle {
+    font-size: 15px;
+  }
+}
+.main .main_contact .main_contact_form .main_contact_form--form {
+  max-width: 332px;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form .main_contact_form--form {
+    margin-top: 15px;
+  }
+}
+.main .main_contact .main_contact_form .main_contact_form--form div {
+  margin: 12px 0;
+}
+.main .main_contact .main_contact_form .main_contact_form--form div label {
+  display: block;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form .main_contact_form--form div label {
+    font-size: 13px;
+  }
+}
+.main .main_contact .main_contact_form .main_contact_form--form div input[type=text],
+.main .main_contact .main_contact_form .main_contact_form--form div input[type=email],
+.main .main_contact .main_contact_form .main_contact_form--form div input[type=tel],
+.main .main_contact .main_contact_form .main_contact_form--form div textarea {
+  width: 100%;
+  padding: 5px;
+  resize: none;
+}
+.main .main_contact .main_contact_form .main_contact_form--form button {
+  width: 100%;
+  height: 58px;
+  border: none;
+  outline: none;
+  background-color: var(--v-blue-secondary-color);
+}
+.main .main_contact .main_contact_form .main_contact_form--form button span {
+  color: var(--v-primary-color);
+  font-size: 24px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+@media (max-width: 768px) {
+  .main .main_contact .main_contact_form .main_contact_form--form button {
+    height: 30px;
+  }
+  .main .main_contact .main_contact_form .main_contact_form--form button span {
+    font-size: 13px;
+  }
+}
+
+.footer {
+  text-align: center;
+  background-color: var(--v-grey-secondary-color);
+  padding: 20px 0;
+}
+.footer span {
+  color: var(--v-blue-tertiary-color);
+  font-weight: 700;
+  font-size: 14px;
+}
+@media (max-width: 768px) {
+  .footer span {
+    font-size: 11px;
   }
 }/*# sourceMappingURL=home.css.map */
