--- a/ex-2/sass/home.sass
+++ b/ex-2/sass/home.sass
@@ -223,7 +223,7 @@
   .main_services
     background-color: var(--v-grey-secondary-color)
     text-align: center
-    padding: 40px 20px
+    padding: 90px 20px
 
     .main_services--text
       color: var(--v-blue-secondary-color)
@@ -258,8 +258,8 @@
           height: 380px
           margin: 20px 5px
 
-        @media (min-width: 501px) and (max-width: 1024px)
-          width: 300px
+        @media (min-width: 769px) and (max-width: 1024px)
+          width: 350px
           margin: 20px 30px
 
         .main_services_content_card--image
@@ -286,3 +286,134 @@
 
             @media (max-width: 768px)
               font-size: 13px
+
+  .main_contact
+    padding: 90px 20px
+    display: flex
+    justify-content: space-around
+    text-transform: uppercase
+
+    @media (max-width: 768px)
+      flex-direction: column
+      align-items: center
+      justify-content: center
+
+    .main_contact_content
+      max-width: 610px
+      
+      @media (max-width: 768px)
+          text-align: center
+
+      .main_contact_content--title
+        color: var(--v-blue-secondary-color)
+        padding: 0 15px
+        margin-bottom: 10px
+        font-size: 32px
+        font-weight: 500
+
+        @media (max-width: 768px)
+          font-size: 20px
+          text-align: center
+
+      .main_contact_content--subtitle
+        margin: 20px 0
+        padding: 0 15px
+        font-size: 24px
+        font-weight: 500
+
+        @media (max-width: 768px)
+          font-size: 15px
+
+      .main_contact_content--galery
+        display: flex
+        flex-wrap: wrap
+        align-items: center
+        margin-top: 35px
+
+        @media (max-width: 768px)
+          justify-content: center
+
+        figure
+          margin: 10px 15px
+
+          @media (max-width: 768px)
+            text-align: start
+
+    .main_contact_form
+      @media (max-width: 768px)
+        margin-top: 40px
+      .main_contact_form--title
+        font-size: 32px
+        font-weight: 500
+        color: var(--v-blue-secondary-color)
+
+        @media (max-width: 768px)
+          font-size: 20px
+          text-align: center
+          margin-bottom: 10px
+
+      .main_contact_form--subtitle
+        font-size: 24px
+        font-weight: 500
+
+        @media (max-width: 768px)
+          font-size: 15px
+
+      .main_contact_form--form
+        max-width: 332px
+
+        @media (max-width: 768px)
+          margin-top: 15px
+
+        div
+          margin: 12px 0
+          
+          label
+            display: block
+
+            @media (max-width: 768px)
+              font-size: 13px
+
+          input[type=text],
+          input[type=email],
+          input[type=tel],
+          textarea
+            width: 100%
+            padding: 5px
+            resize: none
+
+        button
+          width: 100%
+          height: 58px
+          border: none
+          outline: none
+          background-color: var(--v-blue-secondary-color)
+
+          span
+            color: var(--v-primary-color)
+            font-size: 24px
+            font-weight: 500
+            text-transform: uppercase
+
+          @media (max-width: 768px)
+            height: 30px
+
+            span
+              font-size: 13px
+
+.footer
+  text-align: center
+  background-color: var(--v-grey-secondary-color)
+  padding: 20px 0
+
+  span
+    color: var(--v-blue-tertiary-color)
+    font-weight: 700
+    font-size: 14px
+
+  @media (max-width: 768px)
+    span
+      font-size: 11px
+
+
+
